[package]
name = "little_rust"
version = "0.1.0"
authors = ["azusachino <azusachino@duck.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/little-rust"

[[bin]]
name = "toki"
path = "src/bin/toki.rs"

[[bin]]
name = "nixs"
path = "src/bin/nixs.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
byteorder = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
crossbeam = "0.8"
dashmap = "5.4"
futures = "0.3"
futures-util = "0.3"
itertools = "0.10"
openssl = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25", features = ["full"] }
nix = "0.26"
libc = "0.2"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking"] }
html2md = "0.2"
regex = "1.7"
walkdir = "2.3"
glob = "0.3"
csv = "1.2"
toml = "0.7"
bitflags = "1.3"
env_logger = "0.10"
log = "0.4"
rayon = "1.6"
