[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["derive"] } # 命令行解析
colored = "2.0"
jsonxf = "1.1"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.19", features = ["full"] }
syntect = "5"