[package]
name = "miniredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
atoi = "2.0"
bytes = "1.4"
structopt = "0.3"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-futures = { version = "0.2" }
tracing-subscriber = "0.3"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
