[package]
name = "rust_practice"
version = "0.1.1"
authors = ["azusachino <azusachino@duck.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/azusachino/little-rust"
build = "build.rs"

[[bin]]
name = "toki"
path = "src/bin/toki.rs"

[[bin]]
name = "nixs"
path = "src/bin/nixs.rs"

[dependencies]
anyhow = "1"
thiserror = "1"

# web server
axum = "0.7"

# image
image = "0.25"

# utils
lru = "0.12"
percent-encoding = "2"

# photo process
photon-rs = "0.3"

bytes = "1.6"
base64 = "0.22"
byteorder = "1.5"

# hasher
blake3 = "1.5"

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
dashmap = "5.5"
futures = "0.3"
futures-util = "0.3"
hyper = { version = "1", features = ["full"] }
itertools = "0.13"
rand = "0.8"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-uring = "0.5"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
html2md = "0.2"
regex = "1.10"
walkdir = "2.5"
glob = "0.3"
csv = "1.3"
toml = "0.8"
bitflags = "2.5"
log = "0.4"
rayon = "1.10"

dotenv = "0.15"

# telemetry
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.15"

# tower
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# prost
prost = "0.12"
prost-derive = "0.12"
prost-types = "0.12"

# logging
tracing = "0.1"
tracing-core ="0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = "0.29"
io-uring = "0.6"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
prost-build = "0.12"
